# GMNSpy

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  BETA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  autodoc.html  dev-requirements.txt  genindex.html  index.html  lane.html  link.html  link_geometry.html  link_tod.html  location.html  main.py  mkdocs.yml  node.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  quickstart.html  requirements.txt  schema.html  schema_lane.html  schema_link.html  schema_link_geometry.html  schema_link_tod.html  schema_location.html  schema_node.html  schema_segment.html  schema_use_definition.html  schema_use_group.html  search.html  searchindex.js  (+8 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
0.3.0/: 404.html  index.html  sitemap.xml
0.3.1/: 404.html  index.html  sitemap.xml
0.3.3/: 404.html  index.html  sitemap.xml
0.3.4/: 404.html  index.html  sitemap.xml
0.3.5/: 404.html  index.html  sitemap.xml
PR-issue-templates/: 404.html  index.html  sitemap.xml
_archive/: README.md
_generated/: gmnspy.conversion.html  gmnspy.in_out.html  gmnspy.schema.html  gmnspy.utils.html  gmnspy.validate.html
_modules/: genericpath.html  index.html  posixpath.html  typing.html
_sources/: index.rst.txt  lane.md.txt  link.md.txt  link_geometry.md.txt  link_tod.md.txt  location.md.txt  node.md.txt  schema.rst.txt  schema_link.md.txt  schema_link_geometry.md.txt  schema_link_tod.md.txt  (+10 more)
(+231 files in other folders)
