[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gmnspy"
version = "0.3.3"
license = {file = "LICENSE.txt"}
readme = "README.md"
dependencies = [
    "frictionless",
    "pandas>= 1.0"
]
classifiers = [
  "Development Status :: 3 - Alpha",
]

[project.urls]
"Source"  = "https://github.com/e-lo/GMNSpy"
"Homepage" = "https://e-lo.github.io/GMNSpy"


[tool.setuptools.package-data]
"gmnspy.spec" = ["*.json"]


[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
